@@ -1,3 +1,6 @@
+=== 2016-06-20
+* Enhancements
+  * Added #wait_until to page object to support for async events at page level
 === Version 1.0.0
 === 2016-06-04
 * Enhancements
